# xrpl-validator

./: .gitignore  Cargo.toml  DEPLOY.md  LICENSE  PORT-3.2.0.md  PROGRESS.md  README.md  import.py  snapshot.py
alerts/: xrpl-ffi.rules.yml
crates/xrpl-ffi/: Cargo.toml  build.rs
crates/xrpl-ffi/src/: lib.rs
crates/xrpl-ffi/tests/: apply_payment.rs  apply_ticket_create.rs  callback_read_view_ltchild.rs
crates/xrpl-ledger/: Cargo.toml
crates/xrpl-ledger/src/: error.rs  lib.rs
crates/xrpl-ledger/src/ledger/: CLAUDE.md  apply.rs  close.rs  directory.rs  fees.rs  header.rs  keylet.rs  mod.rs  nftpage.rs  objects.rs  sandbox.rs  state.rs  transactor.rs
crates/xrpl-ledger/src/nodestore/: CLAUDE.md  memory.rs  mod.rs  sled_store.rs
crates/xrpl-ledger/src/shamap/: CLAUDE.md  diff.rs  hash.rs  mod.rs  node.rs  sync.rs  tree.rs  tx_tree.rs
crates/xrpl-ledger/src/tx/: account.rs  amm.rs  amm_swap.rs  check.rs  credential.rs  dispatch.rs  escrow.rs  misc.rs  mod.rs  nftoken.rs  offer.rs  oracle.rs  pay_channel.rs  payment.rs  ticket.rs  trust_set.rs
crates/xrpl-ledger/tests/: apply_verify.rs  hash_regression.rs  hash_verify.rs  regression.rs  validate_consecutive.rs
crates/xrpl-ledger/tests/data/txtree/: 104540000.txt  104545000.txt  104550000.txt  104552050.txt  104552077.txt  104552600.txt  104552601.txt  104552610.txt
crates/xrpl-node/: Cargo.toml  build.rs
crates/xrpl-node/src/: CLAUDE.md  amendments.rs  bulk_sync.rs  config.rs  consensus_engine.rs  engine.rs  error.rs  ffi_engine.rs  ffi_verifier.rs  history.rs  incremental_sync.rs  ledger_close.rs  lib.rs  lockstep.rs  nft_pages.rs  node.rs  offer_books.rs  paths.rs  rippled_client.rs  stage3.rs  startup.rs  state_hash.rs  succ_walk.rs  tx_engine.rs  unl_fetch.rs  validation.rs  ws_sync.rs
crates/xrpl-node/src/consensus/: CLAUDE.md  amendment_vote.rs  close_time.rs  fee_vote.rs  mod.rs  proposal.rs  sig_verify.rs  state.rs  threshold.rs  unl.rs  validation.rs
crates/xrpl-node/src/mempool/: CLAUDE.md  mod.rs  queue.rs  relay.rs  validate.rs
crates/xrpl-node/src/overlay/: mod.rs  router.rs
crates/xrpl-node/src/peer/: CLAUDE.md  codec.rs  connection.rs  handshake.rs  identity.rs  manager.rs  message.rs  mod.rs  protocol.rs
crates/xrpl-node/src/rpc/: CLAUDE.md  handlers.rs  metrics.rs  mod.rs  server.rs
crates/xrpl-node/static/: CLAUDE.md  consensus.html  consensus_hybrid.html  consensus_neural.html  historical.html  incidents.html  metrics.html  network.html  peers.html  state.html  validator.html  viewer.html
crates/xrpl-node/tests/: backlog_reapply.rs  cluster.rs  era_sentinel_reapply.rs  ledger_hash_signing.rs  lockstep.rs  peer_connect.rs  release_safety.rs  seed_permissions.rs  signing_gate.rs  succ_walk_offline.rs  testnet_observer.rs  ticket_cluster_reapply.rs  validate_tx.rs  zz_offer_books_offline.rs
crates/xrpl-node/tests/data/: l103515367_blobs.txt  l105035380_blobs.txt  l105035380_expected.json  l105035381_blobs.txt  l105035381_expected.json  l105091578_blobs.txt  l105091578_expected.json  l105091579_blobs.txt  l105091579_expected.json  l105284279_blobs.txt  l105284279_expected.json  l105284280_blobs.txt  l105284280_expected.json  l105663160_blobs.txt  l105663160_expected.json  l105666725_blobs.txt  l105666725_expected.json  l105666804_blobs.txt  l105666804_expected.json  l105666830_blobs.txt  l105666830_expected.json  l105666951_blobs.txt  l105666951_expected.json  l105667108_blobs.txt  l105667108_expected.json  l105667130_blobs.txt  l105667130_expected.json  l105757083_blobs.txt  l105757083_expected.json  l105761432_blobs.txt  l105761432_expected.json  l105761560_blobs.txt  l105761560_expected.json  l105762093_blobs.txt  l105762093_expected.json  l105765230_blobs.txt  l105765230_expected.json  l105765676_blobs.txt  l105765676_expected.json
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/commits/: route.ts
dashboard/app/copilot/investigate/: route.ts
dashboard/app/logs/: LogsClient.tsx  page.tsx
dashboard/components/: consensus-grid.tsx  copilot-panel.tsx  disagreement-history.tsx  footer.tsx  hero-banner.tsx  identity-card.tsx  metrics-grid.tsx  navbar.tsx  node-resources.tsx  speedometer.tsx  transaction-flow.tsx  trend-charts.tsx  tx-feed.tsx
dashboard/hooks/: use-chaos-mode.tsx  use-validator-data.tsx
dashboard/lib/: types.ts  utils.ts
docs/: SLO.md  STATE-2026-07.md  TEST_COVERAGE.md
docs/superpowers/plans/: 2026-05-31-lockstep-m1-shadow-harness.md
docs/superpowers/specs/: 2026-05-31-lockstep-m1-shadow-harness-design.md  2026-06-15-amendment-vote-board-design.md
ffi/: ARCHITECTURE.md  CMakeLists.txt  CallbackReadView.cpp  CallbackReadView.h  Makefile  MinimalApp.cpp  MinimalApp.h  MinimalServiceRegistry.cpp  MinimalServiceRegistry.h  MutationCollector.cpp  MutationCollector.h  STATE_MARSHALING.md  ffi_demo.py  test_shim.c  xrpl_shim.cpp  xrpl_shim.h
grafana/: README.md  xrpl-ffi-dashboard.json
loop-reports/: run-20260716-112329.md  run-20260716-114254.md  run-20260716-145704.md
scripts/: .gitignore  corpus.sh  fetch_ledger_fixture.py  sync-and-restart.sh  system-metrics.py  watch-320-release.mjs  watch_engine.py
