[workspace]
resolver = "2"
members = [
    "crates/xrpl-ledger",
    "crates/xrpl-node",
]

[workspace.dependencies]
# Core types, codec, and crypto from the XRPL Rust SDK
xrpl-core = { git = "https://github.com/ilubxrp589/xrpl-sdk", version = "0.1.0" }

# Serialization
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"
thiserror = { version = "2", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# Crypto
sha2 = { version = "0.10", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Networking & TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
# OpenSSL needed for peer protocol (SSL_get_finished compatibility)
openssl = "0.10"
tokio-openssl = "0.6"

# Protobuf
prost = "0.13"
prost-types = "0.13"

# HTTP server
axum = "0.8"
tower = { version = "0.5", features = ["util"] }

# Concurrency
dashmap = "6"
bytes = "1"
parking_lot = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Compression
flate2 = "1"

# CLI & config
clap = { version = "4", features = ["derive"] }
toml = "0.8"
anyhow = "1"
async-stream = "0.3"
