[package]
name = "xrpl-ledger"
version = "0.1.0"
edition = "2021"
description = "SHAMap, ledger storage, and state management for the XRP Ledger"
license = "MIT"
repository = "https://github.com/ilubxrp589/xrpl-validator"
authors = ["XRPL Rust SDK Contributors"]
keywords = ["xrpl", "xrp", "ripple", "ledger", "shamap"]
categories = ["data-structures", "cryptography"]

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = ["serde/std", "serde_json", "thiserror/std"]
sled-backend = ["sled"]

[dependencies]
xrpl-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }

# Optional persistent storage
sled = { version = "0.34", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
