[package]
name = "xrpl-node"
version = "0.1.0"
edition = "2021"
description = "XRPL validator node — peer protocol, consensus, and RPC server"
license = "MIT"
repository = "https://github.com/ilubxrp589/xrpl-validator"
authors = ["XRPL Rust SDK Contributors"]
keywords = ["xrpl", "xrp", "ripple", "validator", "consensus"]
categories = ["network-programming", "cryptography"]

[lib]
crate-type = ["rlib"]

[features]
default = []
live-tests = []

[dependencies]
xrpl-core = { workspace = true }
xrpl-ledger = { path = "../xrpl-ledger" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
openssl = { workspace = true }
tokio-openssl = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
