[package]
name = "xrpl-node"
version = "0.1.0"
edition = "2021"
description = "XRPL validator node — peer protocol, consensus, and RPC server"
license = "LicenseRef-Proprietary"
repository = "https://github.com/ilubxrp589/xrpl-validator"
authors = ["XRPL Rust SDK Contributors"]
keywords = ["xrpl", "xrp", "ripple", "validator", "consensus"]
categories = ["network-programming", "cryptography"]

[lib]
crate-type = ["rlib"]

[features]
default = []
live-tests = []
# Link against libxrpl via xrpl-ffi for authoritative tx application.
# Requires ffi/build/libxrpl_shim.a to be built first (see ffi/README).
ffi = ["dep:xrpl-ffi"]

[dependencies]
xrpl-core = { workspace = true }
xrpl-ledger = { path = "../xrpl-ledger" }
xrpl-ffi = { path = "../xrpl-ffi", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
rayon = "1.10"
libc = "0.2"
hex = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
openssl = { workspace = true }
tokio-openssl = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
zeroize = { workspace = true }
sled = "0.34"
rocksdb = { version = "0.22", default-features = false, features = ["lz4"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"
tikv-jemallocator = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tempfile = "3"
